--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -1,6 +1,6 @@
 <div class="single-post">
   <div class="feature-img">
-    <img class="img-fluid" src="../assets/img/blog/single_blog_1.png" alt="">
+    <img class="img-fluid" src="./assets/img/blog/single_blog_1.png" alt="">
   </div>
   <div class="blog_details">
     <h2 style="color: #2d2d2d;">Second divided from form fish beast made every of seas
